@@ -1,35 +1,35 @@
 on:      
-off:     x[0-31]
+off:     x[0-63]
 unknown: 
 Command completed successfully
 on:      x[0,8,16,24]
-off:     x[1-7,9-15,17-23,25-31]
+off:     x[1-7,9-15,17-23,25-63]
 unknown: 
 Command completed successfully
 on:      x[0,8,16,24]
-off:     x[1-7,9-15,17-23,25-31]
+off:     x[1-7,9-15,17-23,25-63]
 unknown: 
 Command completed successfully
 on:      
-off:     x[0-31]
+off:     x[0-63]
 unknown: 
 Command completed successfully
 on:      
-off:     x[0-31]
+off:     x[0-63]
 unknown: 
 Command completed successfully
 on:      x[0-31]
-off:     
+off:     x[32-63]
 unknown: 
 Command completed successfully
 on:      x[0-31]
-off:     
+off:     x[32-63]
 unknown: 
 Command completed successfully
 on:      
-off:     x[0-31]
+off:     x[0-63]
 unknown: 
 Command completed successfully
 on:      
-off:     x[0-31]
+off:     x[0-63]
 unknown: 
